2015-04-18 Paul Corner <paul_c@tuxcnc.org>

	* base/scripts/rtai-config.in: added datarootdir; applied and checked 
	  by Pierangelo (Masarati).

2015-03-25 Shahbaz Youssefi <shabbyx@gmail.com>

        * rtai-py/rtai_lxrt.py: fixed nam2num and num2nam typos, argstype
          used in place argtypes.

2015-03-06 Pierangelo Masarati <pierangelo.masarati@polimi.it>

	* RTAI 4.1

2015-01-28 Pierangelo Masarati <pierangelo.masarati@polimi.it>

	* RTAI 4.1-test1

2015-01-18 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/x86/hal/hal_32.c and hal_64.c: warn for the incosistency: 
	  IsolCpusMask && (IsolCpusMask != cpu_isolated_map).

2015-01-14 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/x86/hal/hal.c, hal_32.c and hal_64.c: if IsolCpusMask is 
	  null use that of Linux, so that there is nomore the need to set it
	  in RTAI.

2015-01-14 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/x86/hal/hal_32.c and hal_64.c : avoid reprogramming the 
          apic timer mode when tsc-deadline is available.

2015-01-14 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/asm-x86/rtai_hal_32.h and rtai_hal_64.h: reworked 
	  rt_set_timer_delay.
	* base/include/asm-x86/rtai_hal.h: reorder a set of declarations.
	* base/sched/sched.c: avoid multiple oneshot delay units conversion,
	  unified in rt_set_timer_delay.

2015-01-14 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/asm-x86/rtai_lxrt_32.h and rtai_lxrt_64.h: update 
	  caring of the Linux version when manupulating the fpu_counter in
	  context switches.
	* base/sched/sched.c: care of Linux version in setting need_resched.

2015-01-14 Pierangelo Masarati <masarati@aero.polimi.it>

	* configure.in: fix linux source dir extraction when further args
	  follow -C, thanks to Lukas Anzinger <lukas@lukasanzinger.at>
	* configure: rebuild

2015-01-14 Pierangelo Masarati <masarati@aero.polimi.it>

	* base/sched/{GNUmakefile.am,sched.c}: use MODULE_ALIAS()