@@ -349,7 +349,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 moduledir = @RTAI_MODULE_DIR@
 modext = @RTAI_MODULE_EXT@
-libmath_a_SOURCES = libm.c export_glibc.h
+libmath_a_SOURCES = libm.c export_glibc.h export_newlib.h export_uclibc.h
 @CONFIG_KBUILD_FALSE@noinst_LIBRARIES = libmath.a
 @CONFIG_KBUILD_FALSE@libmath_a_AR = $(CROSS_COMPILE)ar cru
 @CONFIG_KBUILD_FALSE@INCLUDES = \
