@@ -1,0 +1,155 @@
+/*
+ * Copyright (C) 2013 Paolo Mantegazza <mantegazza@aero.polimi.it>
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+ */
+
+#ifndef _RTAI_EXPORT_NEWLIB_H
+#define _RTAI_EXPORT_NEWLIB_H
+
+EXPORT_SYMBOL(matherr);
+
+EXPORT_SYMBOL(acos);
+EXPORT_SYMBOL(acosf);
+EXPORT_SYMBOL(acosh);
+EXPORT_SYMBOL(acoshf);
+EXPORT_SYMBOL(asin);
+EXPORT_SYMBOL(asinf);
+EXPORT_SYMBOL(asinh);
+EXPORT_SYMBOL(asinhf);
+EXPORT_SYMBOL(atan);
+EXPORT_SYMBOL(atanf);
+EXPORT_SYMBOL(atan2);
+EXPORT_SYMBOL(atan2f);
+EXPORT_SYMBOL(atanh);
+EXPORT_SYMBOL(atanhf);
+EXPORT_SYMBOL(j0);
+EXPORT_SYMBOL(j0f);
+EXPORT_SYMBOL(j1);
+EXPORT_SYMBOL(j1f);
+EXPORT_SYMBOL(jn);
+EXPORT_SYMBOL(jnf);
+EXPORT_SYMBOL(y0);
+EXPORT_SYMBOL(y0f);
+EXPORT_SYMBOL(y1);
+EXPORT_SYMBOL(y1f);
+EXPORT_SYMBOL(yn);
+EXPORT_SYMBOL(ynf);
+EXPORT_SYMBOL(cbrt);
+EXPORT_SYMBOL(cbrtf);
+EXPORT_SYMBOL(copysign);
+EXPORT_SYMBOL(copysignf);
+EXPORT_SYMBOL(cosh);
+EXPORT_SYMBOL(coshf);
+EXPORT_SYMBOL(erf);
+EXPORT_SYMBOL(erff);
+EXPORT_SYMBOL(erfc);
+EXPORT_SYMBOL(erfcf);
+EXPORT_SYMBOL(exp);
+EXPORT_SYMBOL(expf);
+EXPORT_SYMBOL(exp2);
+EXPORT_SYMBOL(exp2f);
+EXPORT_SYMBOL(expm1);
+EXPORT_SYMBOL(expm1f);
+EXPORT_SYMBOL(fabs);
+EXPORT_SYMBOL(fabsf);
+EXPORT_SYMBOL(fdim);
+EXPORT_SYMBOL(fdimf);
+EXPORT_SYMBOL(floor);
+EXPORT_SYMBOL(floorf);
+EXPORT_SYMBOL(ceil);
+EXPORT_SYMBOL(ceilf);
+EXPORT_SYMBOL(fma);
+EXPORT_SYMBOL(fmaf);
+EXPORT_SYMBOL(fmax);
+EXPORT_SYMBOL(fmaxf);
+EXPORT_SYMBOL(fmod);
+EXPORT_SYMBOL(fmodf);
+EXPORT_SYMBOL(frexp);
+EXPORT_SYMBOL(frexpf);
+EXPORT_SYMBOL(gamma);
+EXPORT_SYMBOL(gammaf);
+EXPORT_SYMBOL(lgamma);
+EXPORT_SYMBOL(lgammaf);
+EXPORT_SYMBOL(gamma_r);
+EXPORT_SYMBOL(gammaf_r);
+EXPORT_SYMBOL(lgamma_r);
+EXPORT_SYMBOL(lgammaf_r);
+EXPORT_SYMBOL(tgamma);
+EXPORT_SYMBOL(tgammaf);
+EXPORT_SYMBOL(hypot);
+EXPORT_SYMBOL(hypotf);
+EXPORT_SYMBOL(ilogb);
+EXPORT_SYMBOL(ilogbf);
+EXPORT_SYMBOL(infinity);
+EXPORT_SYMBOL(infinityf);
+EXPORT_SYMBOL(ldexp);
+EXPORT_SYMBOL(ldexpf);
+EXPORT_SYMBOL(log);
+EXPORT_SYMBOL(logf);
+EXPORT_SYMBOL(log10);
+EXPORT_SYMBOL(log10f);
+EXPORT_SYMBOL(log1p);
+EXPORT_SYMBOL(log1pf);
+EXPORT_SYMBOL(log2);
+EXPORT_SYMBOL(log2f);
+EXPORT_SYMBOL(logb);
+EXPORT_SYMBOL(logbf);
+EXPORT_SYMBOL(lrint);
+EXPORT_SYMBOL(lrintf);
+EXPORT_SYMBOL(llrint);
+EXPORT_SYMBOL(llrintf);
+EXPORT_SYMBOL(lround);
+EXPORT_SYMBOL(lroundf);
+EXPORT_SYMBOL(llround);
+EXPORT_SYMBOL(llroundf);
+EXPORT_SYMBOL(modf);
+EXPORT_SYMBOL(modff);
+EXPORT_SYMBOL(nan);
+EXPORT_SYMBOL(nanf);
+EXPORT_SYMBOL(nearbyint);
+EXPORT_SYMBOL(nearbyintf);
+EXPORT_SYMBOL(nextafter);
+EXPORT_SYMBOL(nextafterf);
+EXPORT_SYMBOL(pow);
+EXPORT_SYMBOL(powf);
+EXPORT_SYMBOL(remainder);
+EXPORT_SYMBOL(remainderf);
+EXPORT_SYMBOL(remquo);
+EXPORT_SYMBOL(remquof);
+EXPORT_SYMBOL(rint);
+EXPORT_SYMBOL(rintf);
+EXPORT_SYMBOL(round);
+EXPORT_SYMBOL(roundf);
+EXPORT_SYMBOL(scalbn);
+EXPORT_SYMBOL(scalbnf);
+EXPORT_SYMBOL(scalbln);
+EXPORT_SYMBOL(scalblnf);
+EXPORT_SYMBOL(sin);
+EXPORT_SYMBOL(sinf);
+EXPORT_SYMBOL(cos);
+EXPORT_SYMBOL(cosf);
+EXPORT_SYMBOL(sinh);
+EXPORT_SYMBOL(sinhf);
+EXPORT_SYMBOL(sqrt);
+EXPORT_SYMBOL(sqrtf);
+EXPORT_SYMBOL(tan);
+EXPORT_SYMBOL(tanf);
+EXPORT_SYMBOL(tanh);
+EXPORT_SYMBOL(tanhf);
+EXPORT_SYMBOL(trunc);
+EXPORT_SYMBOL(truncf);
+
+#endif /* !_RTAI_EXPORT_NEWLIB_H */
